# icp-token-wallet

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/icp-token-wallet-backend/: Cargo.toml  icp-token-wallet-backend.did  icp_token_wallet_backend.did
src/icp-token-wallet-backend/src/: lib.rs
src/icp-token-wallet-frontend/: package.json
src/icp-token-wallet-frontend/src/: App.jsx  index.scss  tokenService.js  your_backend_idl.js
