[package]
name = "icp-token-wallet-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-timers = "0.10" # Remove this if not using timers
ic-cdk-macros = "0.16"

# Added support for building token-related functionality
ic-kit = { version = "0.5.0-alpha.4" }
icrc = "0.0.1"
icrc-ledger-types = "0.1.5"

# Added Serde for serialization/deserialization
serde = { version = "1.0.197", features = ["derive"] }

# Added logging dependencies for debugging
log = "0.4.20"
env_logger = "0.10.0"

[patch.crates-io]
memmap = { package = "memmap2", version = "0.5.3" }

# Add more dependencies if required for additional features
